// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`restore-document-from-recycle-bin should handle non-existent document 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;

exports[`restore-document-from-recycle-bin should restore a document from recycle bin 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;
